--- a/deps/qjs/src/TODO
+++ b/deps/qjs/src/TODO
@@ -1,4 +1,3 @@
-- fix regexp skip in js_parse_skip_parens_token()
 - 64-bit atoms in 64-bit mode?
 - rename CONFIG_ALL_UNICODE, CONFIG_BIGNUM, CONFIG_ATOMICS, CONFIG_CHECK_JSVALUE ?
 - unify coding style and naming conventions
@@ -11,8 +10,6 @@
 - use 2 bytecode DynBufs in JSFunctionDef, one for reading, one for writing
   and use the same wrappers in all phases
 - use more generic method for line numbers in resolve_variables and resolve_labels
-- bignum:
-  - fix Atomics support
 
 Memory:
 - test border cases for max number of atoms, object properties, string length
@@ -53,8 +50,6 @@ Optimizations:
 
 Extensions:
 - support more features in [features] section
-- add TC39 stage 3 proposals: String.prototype.matchAll, Symbol.matchAll
-- fix preprocessor bug if nested #ifdef in jscompress.c
 - add built-in preprocessor in compiler, get rid of jscompress
   handle #if, #ifdef, #line, limited support for #define
 - limited support for web assembly 
@@ -78,6 +73,8 @@ REPL:
 - close all predefined methods in repl.js and jscalc.js
 
 Test262o:   0/11262 errors, 463 excluded
-Test262:   51/56682 errors, 787 excluded, 6289 skipped
-Test262bn: 56/58017 errors, 1007 excluded, 5398 skipped
-test262 commit: 51d1abadce1de0b38594b7c9972ee60762f35dd0
+Test262o commit: 7da91bceb9ce7613f87db47ddd1292a2dda58b42 (es5-tests branch)
+
+Test262:   2/67303 errors, 839 excluded, 1390 skipped
+Test262bn: 2/69404 errors, 772 excluded, 403 skipped
+test262 commit: b63cdfd4f4a00f5fdb732778244d3456725f46c9
